--- a/client/src/pages/about/about-page.css
+++ b/client/src/pages/about/about-page.css
@@ -46,7 +46,7 @@ body {
   height: 234px;
   left: 541px;
   top: 300px;
-
+text-align: left;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
@@ -127,9 +127,9 @@ body {
     background: #3f3d56;
     
     position: absolute;
-    width: 162.75px;
+    width: 200px;
     height: 117px;
-    left: 130px;
+    left: 90px;
     top: 143px;
     
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
