--- a/client/src/pages/about/about-page.css
+++ b/client/src/pages/about/about-page.css
@@ -102,7 +102,8 @@ text-align: left;
     position: absolute;
     width: 223px;
     height: 61px;
-    left: 40px;
+    /* left: 40px; */
+    left:25%;
     top: 45px;
 
     font-family: Poppins;
